--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                 <div class="footer__info h4">Let’s make it an amazing one.</div>
               </div>
               <div class="footer__menu"><a class="footer__link" href="#">About Me</a><a class="footer__link"
-                  href="#">Projects</a><a class="footer__link" href="#">Contact</a><a class="footer__link"
+                  href="#">Projects</a><a class="footer__link" href="#details">Contact</a><a class="footer__link"
                   href="#">Dribbble</a><a class="footer__link" href="#">Instagram</a></div>
             </div>
             <div class="footer__bottom">
@@ -584,7 +584,7 @@
         </div>
       </div>
     </div>
-    <div class="cursor"></div>
+    
   </div>
   <script src="js/lib/jquery.min.js"></script>
   <script src="js/lib/owl.carousel.min.js"></script>
